--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main id="main">
     <h1>Chào mừng đến với trang chính</h1>
-    <img src="images/image1.jpg" alt="Ảnh trang chính" class="styled-image">
+    <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" class="styled-image">
   </main>
 </body>
 </html>
