--- a/grid.html
+++ b/grid.html
@@ -18,10 +18,10 @@
   <main id="main">
     <h1>Trang trình bày bằng Grid</h1>
     <section class="grid-container">
-      <img src="images/grid1.jpg" alt="Ảnh grid 1" class="styled-image">
-      <img src="images/grid2.jpg" alt="Ảnh grid 2" class="styled-image">
-      <img src="images/grid3.jpg" alt="Ảnh grid 3" class="styled-image">
-      <img src="images/grid4.jpg" alt="Ảnh grid 4" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh grid 1" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh grid 2" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh grid 3" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh grid 4" class="styled-image">
     </section>
   </main>
 </body>
