--- a/gallery.html
+++ b/gallery.html
@@ -18,11 +18,11 @@
   <main id="main">
     <h1>Thư viện ảnh</h1>
     <section class="gallery">
-      <img src="images/gallery1.jpg" alt="Ảnh 1" class="styled-image">
-      <img src="images/gallery2.jpg" alt="Ảnh 2" class="styled-image">
-      <img src="images/gallery3.jpg" alt="Ảnh 3" class="styled-image">
-      <img src="images/gallery4.jpg" alt="Ảnh 4" class="styled-image">
-      <img src="images/gallery5.jpg" alt="Ảnh 5" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh 1" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh 2" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh 3" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh 4" class="styled-image">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.Q6kV_vvF28sS-LDducZ-HQAAAA&pid=Api&P=0&h=220" alt="Ảnh 5" class="styled-image">
     </section>
   </main>
 </body>
